--- a/package.json
+++ b/package.json
@@ -1,31 +1,12 @@
 {
   "name": "can-event-radiochange",
-  "version": "0.0.0",
   "description": "The custom \"radiochange\" event",
-  "homepage": "http://canjs.com",
-  "repository": {
-    "type": "git",
-    "url": "git://github.com/canjs/can-event-radiochange.git"
-  },
+  "version": "0.0.0",
   "author": {
     "name": "Bitovi",
     "email": "core@donejs.com",
     "url": "https://bitovi.com"
   },
-  "scripts": {
-    "preversion": "npm test && npm run build",
-    "version": "git commit -am \"Update version number\" && git checkout -b release && git add -f dist/",
-    "postpublish": "git push --tags && git checkout master && git branch -D release && git push",
-    "testee": "testee test.html --browsers firefox",
-    "test": "npm run jshint && npm run testee",
-    "jshint": "jshint ./*.js ./src/ --config",
-    "release:patch": "npm version patch && npm publish",
-    "release:minor": "npm version minor && npm publish",
-    "release:major": "npm version major && npm publish",
-    "build": "node build.js",
-    "develop": "done-serve --static --develop --port 8080"
-  },
-  "main": "dist/cjs/can-event-radiochange",
   "browser": {
     "transform": [
       "cssify"
@@ -36,11 +17,47 @@
       "cssify"
     ]
   },
+  "bugs": {
+    "url": "https://github.com/canjs/can-event-radiochange/issues"
+  },
+  "devDependencies": {
+    "can-util": "^3.4.1",
+    "done-serve": "^1.0.0",
+    "donejs-cli": "^1.0.0",
+    "fixpack": "^2.3.1",
+    "generator-donejs": "^1.0.0",
+    "jshint": "^2.9.1",
+    "steal": "^1.3.1",
+    "steal-qunit": "^1.0.1",
+    "steal-tools": "^1.2.0",
+    "testee": "^0.3.0"
+  },
+  "homepage": "http://canjs.com",
   "keywords": [
     "canjs",
     "canjs-plugin",
     "donejs"
   ],
+  "license": "MIT",
+  "main": "dist/cjs/can-event-radiochange",
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/canjs/can-event-radiochange.git"
+  },
+  "scripts": {
+    "build": "node build.js",
+    "develop": "done-serve --static --develop --port 8080",
+    "jshint": "jshint ./*.js ./src/ --config",
+    "lint": "fixpack && npm run jshint",
+    "postpublish": "git push --tags && git checkout master && git branch -D release && git push",
+    "preversion": "npm test && npm run build",
+    "release:major": "npm version major && npm publish",
+    "release:minor": "npm version minor && npm publish",
+    "release:patch": "npm version patch && npm publish",
+    "test": "npm run lint && npm run testee",
+    "testee": "testee test.html --browsers firefox",
+    "version": "git commit -am \"Update version number\" && git checkout -b release && git add -f dist/"
+  },
   "steal": {
     "main": "can-event-radiochange",
     "configDependencies": [
@@ -55,19 +72,5 @@
     "directories": {
       "lib": "src"
     }
-  },
-  "dependencies": {
-    "can-util": "^3.4.1"
-  },
-  "devDependencies": {
-    "jshint": "^2.9.1",
-    "steal": "^1.3.1",
-    "steal-qunit": "^1.0.1",
-    "steal-tools": "^1.2.0",
-    "testee": "^0.3.0",
-    "generator-donejs": "^1.0.0",
-    "donejs-cli": "^1.0.0",
-    "done-serve": "^1.0.0"
-  },
-  "license": "MIT"
+  }
 }
