--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "develop": "done-serve --static --develop --port 8080",
     "jshint": "jshint ./*.js ./src/ --config",
     "lint": "fixpack && npm run jshint",
-    "postpublish": "git push --tags && git checkout can-reflect && git branch -D release && git push",
+    "postpublish": "git push --tags && git checkout master && git branch -D release && git push",
     "preversion": "npm test && npm run build",
     "release:major": "npm version major && npm publish",
     "release:minor": "npm version minor && npm publish",
